--- a/locallytrivial/config.toml
+++ b/locallytrivial/config.toml
@@ -3,7 +3,7 @@ baseURL = "http://locallytrivial.com/"
 defaultContentLanguage = "en"
 # language code
 languageCode = "en"
-title = "Locally Trivial"
+title = "Jim W. Kennington"
 disqusShortname = 'locally-trivial'
 
 # Change the default theme to be use when building the site with Hugo
@@ -16,32 +16,36 @@ theme = "LoveIt"
 
 [menu]
   [[menu.main]]
-    identifier = "posts"
+    identifier = "about"
     # you can add extra information before the name (HTML format is supported), such as icons
     pre = ""
     # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
-    name = "Posts"
-    url = "/posts/"
+    name = "About"
+    url = "/about/"
     # title will be shown when you hover on this menu link
     title = ""
     weight = 1
   [[menu.main]]
-    identifier = "tags"
+    identifier = "resources"
     pre = ""
     post = ""
-    name = "Tags"
-    url = "/tags/"
+    name = "Resources"
+    url = "/resources/"
     title = ""
     weight = 2
   [[menu.main]]
-    identifier = "categories"
-    pre = ""
-    post = ""
-    name = "Categories"
-    url = "/categories/"
-    title = ""
-    weight = 3
+    parent = "resources"
+    name = "Physics Texts"
+    identifier = "text-physics"
+    url = "texts-physics"
+    weight = 1
+  [[menu.main]]
+    parent = "resources"
+    name = "Math Texts"
+    identifier = "text-math"
+    url = "texts-math"
+    weight = 2
 
 # Markup related configuration in Hugo
 [markup]
@@ -79,11 +83,11 @@ theme = "LoveIt"
       # Gravatar Email for preferred avatar in home page
       gravatarEmail = ""
       # URL of avatar shown in home page
-      avatarURL = "/images/avatar.png"
+      avatarURL = "/images/jwk-2021-small.png"
       # LoveIt CHANGED | 0.2.7 title shown in home page (HTML format is supported)
       title = ""
       # subtitle shown in home page
-      subtitle = "This is My New Hugo Site"
+      subtitle = "Physics, Mathematics, and Code"
       # whether to use typeit animation for subtitle
       typeit = true
       # whether to show social links
@@ -95,20 +99,34 @@ theme = "LoveIt"
       enable = true
       # special amount of posts in each home posts page
       paginate = 6
-      # LoveIt DELETED | 0.2.0 replaced with hiddenFromHomePage in params.page
       # default behavior when you don't set "hiddenFromHomePage" in front matter
       defaultHiddenFromHomePage = false
   # Social config about the author
   [params.social]
-    Patreon = "https://www.patreon.com/locallytrivial"
-    Twitter = "https://twitter.com/LocallyTrivial"
-    Instagram = "https://www.instagram.com/locallytrivial/"
-    Youtubechannel = "https://www.youtube.com/channel/UCCWTz7qwUnlH57Nab1UsYwg"
-    GitHub = "https://github.com/JWKennington"
-    Researchgate = "https://www.researchgate.net/profile/James-Kennington"
-    Linkedin = "https://www.linkedin.com/in/jameskennington/"
-    Email = "locallytrivial@gmail.com"
-    RSS = true # LoveIt NEW | 0.2.0
+    [params.social.Patreon]
+      weight = 1
+      id = "locallytrivial"
+    [params.social.Twitter]
+      weight = 2
+      id = "LocallyTrivial"
+    [params.social.Instagram]
+      weight = 3
+      id = "https://www.instagram.com/locallytrivial/"
+    [params.social.Youtubechannel]
+      weight = 4
+      id = "UCCWTz7qwUnlH57Nab1UsYwg"
+    [params.social.GitHub]
+      weight = 5
+      id = "JWKennington"
+    [params.social.Researchgate]
+      weight = 6
+      id = "James-Kennington"
+    [params.social.LinkedIn]
+      weight = 7
+      id = "jameskennington"
+    [params.social.RSS]
+      weight = 0
+      # RSS = true # LoveIt NEW | 0.2.0
 
 # LoveIt CHANGED | 0.2.0 Page config
 [params.page]
@@ -139,12 +157,25 @@ theme = "LoveIt"
       id = "G-M7DMHENCW1"
       # whether to anonymize IP
       anonymizeIP = true
+  # Footer config
+  [params.footer]
+    enable = true
+    # LoveIt NEW | 0.2.0 Custom content (HTML format is supported)
+    # custom = ''
+    # LoveIt NEW | 0.2.0 whether to show Hugo and theme info
+    hugo = false
+    # LoveIt NEW | 0.2.0 whether to show copyright info
+    copyright = true
+    # LoveIt NEW | 0.2.0 whether to show the author
+    author = true
+    # Site creation time
+    since = 2021
 
 # Author config
 [author]
   name = "Jim Kennington"
   email = ""
-  link = ""
+  link = "about"
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
