--- a/locallytrivial/config.toml
+++ b/locallytrivial/config.toml
@@ -6,7 +6,7 @@ languageCode = "en"
 title = "Jim W. Kennington"
 disqusShortname = 'locally-trivial'
 
-googleAnalytics = "G-PBMXNQK5V1"
+#googleAnalytics = "G-PBMXNQK5V1"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "FeelIt"
@@ -203,9 +203,9 @@ theme = "FeelIt"
     [params.social.Hackernews]
       weight = 5
       id = "JWKennington"
-    [params.social.Patreon]
+    [params.social.KoFi]
       weight = 6
-      id = "locallytrivial"
+      id = "jwkennington"
     [params.social.LinkedIn]
       weight = 2
       id = "jameskennington"
