--- a/locallytrivial/_quarto.yml
+++ b/locallytrivial/_quarto.yml
@@ -12,6 +12,8 @@ website:
     right:
       - text: "Home"
         href: index.qmd
+      - text: "About"
+        href: about.qmd
       - text: "Research"
         href: research.qmd
       - text: "Notes"     # The Blog Feed
