--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,11 +17,27 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      # 1. Setup uv
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      # 2. Build Environment
+      # 'uv sync' installs Python (if needed) and all dependencies from pyproject.toml into .venv
+      - name: Install dependencies
+        run: uv sync
+
+      # 3. Setup Quarto
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
+      # 4. Render
+      # We set QUARTO_PYTHON to point specifically to the uv environment
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
+        env:
+          QUARTO_PYTHON: .venv/bin/python
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -29,5 +45,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
-          cname: locallytrivial.com
-          
+          cname: jwkennington.com
